code cleanup, minor fix to demo swagger.yaml, the demo code regenerated
