# examples/greeter/models/body.go
@@ -1,46 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/swag"
-)
-
-// Body body
-// swagger:model body
-type Body struct {
-
-	// greeting person
-	Name string `json:"name,omitempty"`
-
-	// greeting text
-	Text string `json:"text,omitempty"`
-}
-
-// Validate validates this body
-func (m *Body) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Body) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Body) UnmarshalBinary(b []byte) error {
-	var res Body
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
